--- a/mithril-signer/Cargo.toml
+++ b/mithril-signer/Cargo.toml
@@ -47,6 +47,7 @@ tikv-jemallocator = { version = "0.6.0", optional = true }
 
 [dev-dependencies]
 criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }
+http = "1.1.0"
 httpmock = "0.7.0"
 mithril-common = { path = "../mithril-common" }
 mockall = "0.13.0"
