--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -305,7 +305,7 @@ jobs:
             run_id: "#1"
             extra_args: "--use-p2p-network"
           # Include a test for the era switch without regenesis
-          - mode: "p2p"
+          - mode: "std"
             era: ${{ fromJSON(needs.build-ubuntu-X64.outputs.eras)[0] }}
             next_era: ${{ fromJSON(needs.build-ubuntu-X64.outputs.eras)[1] }}
             cardano_node_version: "9.1.1"
@@ -313,7 +313,7 @@ jobs:
             run_id: "#1"
             extra_args: ""
           # Include a test for the era switch with regenesis
-          - mode: "p2p"
+          - mode: "std"
             era: ${{ fromJSON(needs.build-ubuntu-X64.outputs.eras)[0] }}
             next_era: ${{ fromJSON(needs.build-ubuntu-X64.outputs.eras)[1] }}
             cardano_node_version: "9.1.1"
