Create a `internal/mithril-metric` crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ members = [
   "internal/mithril-build-script",
   "internal/mithril-doc",
   "internal/mithril-doc-derive",
+  "internal/mithril-metric",
   "internal/mithril-persistence",
   "mithril-aggregator",
   "mithril-client",
