--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -873,7 +873,7 @@ jobs:
         with:
           output: out/
           spec-file: ./openapi.yaml
-          token: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Publish OpenAPI UI build
         uses: actions/upload-artifact@v4
