--- a/mithril-infra/assets/docker/prometheus/prometheus-base.yml
+++ b/mithril-infra/assets/docker/prometheus/prometheus-base.yml
@@ -40,3 +40,9 @@ scrape_configs:
     file_sd_configs:
       - files:
           - "mithril-signer.json"
+
+  - job_name: "mithril-aggregators"
+    file_sd_configs:
+      - files:
+          - "mithril-aggregator.json"
+
