--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -290,7 +290,8 @@ jobs:
         mode: ["std"]
         era: ${{ fromJSON(needs.build-ubuntu-X64.outputs.eras) }}
         next_era: [""]
-        cardano_node_version: ["9.0.0", "9.1.0", "9.1.1", "9.2.0", "9.2.1"]
+        cardano_node_version:
+          ["9.0.0", "9.1.0", "9.1.1", "9.2.0", "9.2.1", "10.1.0-pre"]
         hard_fork_latest_era_at_epoch: [0]
         run_id: ["#1"]
         extra_args: [""]
@@ -300,7 +301,7 @@ jobs:
           - mode: "p2p"
             era: ${{ fromJSON(needs.build-ubuntu-X64.outputs.eras)[0] }}
             next_era: [""]
-            cardano_node_version: "9.1.1"
+            cardano_node_version: "9.2.1"
             hard_fork_latest_era_at_epoch: 0
             run_id: "#1"
             extra_args: "--use-p2p-network"
@@ -308,7 +309,7 @@ jobs:
           - mode: "std"
             era: ${{ fromJSON(needs.build-ubuntu-X64.outputs.eras)[0] }}
             next_era: ${{ fromJSON(needs.build-ubuntu-X64.outputs.eras)[1] }}
-            cardano_node_version: "9.1.1"
+            cardano_node_version: "9.2.1"
             hard_fork_latest_era_at_epoch: 0
             run_id: "#1"
             extra_args: ""
@@ -316,7 +317,7 @@ jobs:
           - mode: "std"
             era: ${{ fromJSON(needs.build-ubuntu-X64.outputs.eras)[0] }}
             next_era: ${{ fromJSON(needs.build-ubuntu-X64.outputs.eras)[1] }}
-            cardano_node_version: "9.1.1"
+            cardano_node_version: "9.2.1"
             hard_fork_latest_era_at_epoch: 0
             run_id: "#1"
             extra_args: "--mithril-era-regenesis-on-switch"
