--- a/examples/client-cardano-stake-distribution/Cargo.toml
+++ b/examples/client-cardano-stake-distribution/Cargo.toml
@@ -12,7 +12,7 @@ repository = "https://github.com/input-output-hk/mithril/"
 [dependencies]
 anyhow = "1.0.89"
 clap = { version = "4.5.20", features = ["derive", "env"] }
-mithril-client = { path = "../../mithril-client", features = ["unstable"] }
+mithril-client = { path = "../../mithril-client" }
 slog = "2.7.0"
 slog-async = "2.8.0"
 slog-term = "2.9.1"
