chore(explorer): upgrade to next 15
caveat:
* Vercel recommend to use React 19 that's still a release candidate, but
  it's not compatible with `@reduxjs/toolkit` so React 18.3 is kept.
* Version 15 of `eslint-config-next` is compatible with eslint 9 but
  still ask for version `8.57.1` in its package json, leading to
  warnings when using `npm install`.
  We should keep using eslint `8.57` until this is solved.
* Vercel say that Turbopack, its webpack replacement made with rust, is
  ready for use in dev, but when we use it the app crash because it
  can't import properly the wasm library.
  We should keep using webpack until this is solved.
  Note: To test this tool, add ` --turbopack` to the `dev` scripts in
  package.json.

--- a/mithril-explorer/Makefile
+++ b/mithril-explorer/Makefile
@@ -52,8 +52,9 @@ clean:
 	rm package-lock.json || true
 
 upgrade: clean install
-	# Note: eslint versions 9 or up are not compatible with versions 14.2+ of eslint-config-next
-	# Todo: switch to eslint-config-next@latest when a compatible version is released
+	# Note: `eslint` versions 9 or up is compatible with versions 15.0+ of `eslint-config-next` but raises warnings when
+	# using `npm install` (ie: "Conflicting peer dependency: eslint@8.57.1").
+	# Todo: switch to `eslint@latest` when `eslint-config-next` is fully compatible with eslint 9.
 	npm install \
 		@popperjs/core@latest \
 		@reduxjs/toolkit@latest \
