--- a/.github/workflows/nightly-docker-builds.yml
+++ b/.github/workflows/nightly-docker-builds.yml
@@ -1,8 +1,10 @@
 name: Nightly Docker Builds
 
 on:
+  # Important note about scheduled workflows:
+  # Notifications for scheduled workflows are sent to the user who last modified the cron syntax in the workflow file.
   schedule:
-    - cron: "0 2 * * *"
+    - cron: "30 2 * * *"
   workflow_dispatch:
 
 jobs:
