--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -290,10 +290,9 @@ jobs:
         mode: ["std"]
         era: ${{ fromJSON(needs.build-ubuntu-X64.outputs.eras) }}
         next_era: [""]
-        cardano_node_version:
-          ["9.0.0", "9.1.0", "9.1.1", "9.2.0", "9.2.1", "10.1.0-pre"]
+        cardano_node_version: ["9.1.1", "9.2.1", "10.1.1"]
         hard_fork_latest_era_at_epoch: [0]
-        run_id: ["#1"]
+        run_id: ["#1", "#2"]
         extra_args: [""]
 
         include:
