ci: update cron schedule expression with co-authors to allow notifications
Co-authored-by: Sébastien Fauvel <sfauvel@users.noreply.github.com>
Co-authored-by: DJO <Alenar@users.noreply.github.com>
Co-authored-by: Jean-Philippe Raynaud <jpraynaud@users.noreply.github.com>

--- a/.github/workflows/nightly-backward-compatibility.yml
+++ b/.github/workflows/nightly-backward-compatibility.yml
@@ -1,9 +1,10 @@
 name: Nightly backward compatibility
 
 on:
+  # Important note about scheduled workflows:
+  # Notifications for scheduled workflows are sent to the user who last modified the cron syntax in the workflow file.
   schedule:
-    - cron: "0 2 * * *"
-    - cron: "0 14 * * *"
+    - cron: "30 2 * * *"
   workflow_dispatch:
     inputs:
       total-releases:
