chore: add mention about experimental status of 'build-nodejs' command

--- a/mithril-client-wasm/Makefile
+++ b/mithril-client-wasm/Makefile
@@ -13,6 +13,7 @@ build:
 	wasm-pack build --target web --release --out-name index
 
 build-nodejs: 
+	echo "This is an experimental feature which may change in the future."
 	wasm-pack build --target nodejs --release --out-name index
 
 test:
