--- a/docs/website/package.json
+++ b/docs/website/package.json
@@ -17,14 +17,16 @@
   },
   "dependencies": {
     "@docusaurus/core": "^3.6.0",
-    "@docusaurus/plugin-sitemap": "^3.6.0",
     "@docusaurus/plugin-client-redirects": "^3.6.0",
+    "@docusaurus/plugin-sitemap": "^3.6.0",
     "@docusaurus/preset-classic": "^3.6.0",
     "@docusaurus/theme-mermaid": "^3.6.0",
     "clsx": "^2.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "redocusaurus": "^2.1.2"
+    "redocusaurus": "^2.1.2",
+    "rehype-katex": "^7.0.1",
+    "remark-math": "^6.0.0"
   },
   "browserslist": {
     "production": [
