feat(client-wasm): build multiple targets: web, nodejs, and bundler
+ adapt www, www-test, and explorer `package.json` and upgrade their
  dependencies

Co-authored-by: Damien Lachaume <dlachaume@users.noreply.github.com>

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,7 +1,6 @@
 demo/protocol-demo/artifacts/
 docs/website/.docusaurus/
 docs/website/build/
-mithril-client-wasm/pkg/
 mithril-explorer/font.css.hbs
 mithril-explorer/out/
 mithril-explorer/.next/
@@ -12,3 +11,5 @@ mithril-test-lab/mithril-end-to-end/monitor/config/grafana/provisioning/dashboar
 mithril-test-lab/mithril-aggregator-fake/default_data/
 mithril-test-lab/mithril-devnet/configuration/
 flake.lock
+**/dist/
+**/pkg/
