refactor: reorganize wasm example & ci test
- Move nodejs & web browser examples to the `/examples` directory
  - Standardize them: add a README and a MAKEFILE when missing
- Rename `mithril-client-wasm/www-test` to `ci-test`
- adapt ci
- adapt upgrade repository dependencies devbook

Co-authored-by: Damien Lachaume <dlachaume@users.noreply.github.com>

--- a/examples/client-wasm-nodejs/Makefile
+++ b/examples/client-wasm-nodejs/Makefile
@@ -11,10 +11,8 @@ clean:
 
 upgrade: clean install
 	npm install \
-		copy-webpack-plugin@latest \
-		webpack@latest \
-		webpack-cli@latest \
-		webpack-dev-server@latest \
+		prettier@latest \
+
 
 lint:
 	npm run pretty:check
