fix(explorer): fix a next error when using client wasm lib
by targetting explicitly the web package, else NextJs want to target
both the node package for it's Server side rendering and the web package
for the client side. It then fail to find the node package and fallback
to client rendering with an error.

Co-authored-by: Damien Lachaume <dlachaume@users.noreply.github.com>

--- a/mithril-explorer/package.json
+++ b/mithril-explorer/package.json
@@ -13,7 +13,7 @@
     "test:ci": "jest --ci"
   },
   "dependencies": {
-    "@mithril-dev/mithril-client-wasm": "file:../mithril-client-wasm/",
+    "@mithril-dev/mithril-client-wasm": "file:../mithril-client-wasm/dist/web",
     "@popperjs/core": "^2.11.8",
     "@reduxjs/toolkit": "^2.3.0",
     "bootstrap": "^5.3.3",
