fix: execute `client_wasm` tests for nodejs
Prevent from executing `certificate_verification_cache.rs` tests that uses
the local storage, which is not supported with node.

--- a/mithril-client-wasm/Cargo.toml
+++ b/mithril-client-wasm/Cargo.toml
@@ -34,6 +34,7 @@ mithril-build-script = { path = "../internal/mithril-build-script" }
 [features]
 # Include nothing by default
 default = []
+test-node = []
 
 [package.metadata.docs.rs]
 all-features = true
