--- a/mithril-client-wasm/Makefile
+++ b/mithril-client-wasm/Makefile
@@ -15,12 +15,15 @@ build:
 test:
 	pkill -f "mithril-aggregator-fake" || true
 	${CARGO} run -p mithril-aggregator-fake -- -p 8000 &
-	if wasm-pack test --headless --firefox --chrome --node --release; then \
+	if ! wasm-pack test --headless --firefox --chrome --release; then \
 		pkill -f "mithril-aggregator-fake" || true; \
-	else \
+        exit 1; \
+    fi
+	if ! wasm-pack test --node --release --features test-node; then \
 		pkill -f "mithril-aggregator-fake" || true; \
 		exit 1; \
 	fi
+	pkill -f "mithril-aggregator-fake" || true
 
 check:
 	${CARGO} check --release --all-features --all-targets
