--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -158,7 +158,7 @@ jobs:
       - name: Test 'mithril-client-wasm' - NodeJS
         shell: bash
         run: |
-          wasm-pack test --node mithril-client-wasm --release
+          wasm-pack test --node mithril-client-wasm --release --features test-node
 
       - name: Publish Mithril Distribution (WASM)
         uses: actions/upload-artifact@v4
