fix: 'make upgrade' command of documentation website
Update misisng official docusaurus plugins.

--- a/docs/website/Makefile
+++ b/docs/website/Makefile
@@ -21,6 +21,8 @@ clean:
 upgrade: clean install
 	npm install \
 	@docusaurus/core@latest \
+	@docusaurus/plugin-client-redirects@latest \
+	@docusaurus/plugin-sitemap@latest \
 	@docusaurus/preset-classic@latest \
 	@docusaurus/theme-mermaid@latest \
 	clsx@latest \
