fix: 'make upgrade' command of documentation website
To avoid dependencies conflicts on react.

--- a/docs/website/Makefile
+++ b/docs/website/Makefile
@@ -19,6 +19,7 @@ clean:
 	rm package-lock.json || true
 
 upgrade: clean install
+	# Update to the latest version of react and react-dom when it is supported and does not create dependency conflicts
 	npm install \
 	@docusaurus/core@latest \
 	@docusaurus/plugin-client-redirects@latest \
@@ -26,8 +27,8 @@ upgrade: clean install
 	@docusaurus/preset-classic@latest \
 	@docusaurus/theme-mermaid@latest \
 	clsx@latest \
-	react@latest \
-	react-dom@latest \
+	react@^18.3.1 \
+	react-dom@^18.3.1 \
 	redocusaurus@latest
 
 update-current:
