feat: configure 'Aggregator Stress Test' workflow in nightly dispatcher

--- a/.github/workflows/nightly-dispatcher.yml
+++ b/.github/workflows/nightly-dispatcher.yml
@@ -7,15 +7,18 @@ on:
     - cron: "0 2 * * *"
 
 jobs:
-  docker-builds:
-    uses: ./.github/workflows/docker-builds.yml
-
   backward-compatibility:
     uses: ./.github/workflows/backward-compatibility.yml
 
+  docker-builds:
+    uses: ./.github/workflows/docker-builds.yml
+
+  aggregator-stress-test:
+    uses: ./.github/workflows/aggregator-stress-test.yml
+
   notify-on-failure:
     runs-on: ubuntu-22.04
-    needs: [docker-builds]
+    needs: [docker-builds, aggregator-stress-test]
     if: failure()
     steps:
       - name: Checkout repository
